# denmon

./: Cargo.toml
.github/workflows/: notify.yml
specs/: impl-tether-supply.md
src/: main.rs
src/types/: command.rs
src/types/command/: check_tether_supply_command.rs
yolobox/configs/: secret_env_vars.txt
yolobox/configs/dnsmasq.d/: allowed_domains.conf
