[package]
name = "denmon"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
description = ""
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/DenisGorbachev/denmon"
repository = "https://github.com/DenisGorbachev/denmon"
readme = "README.md"
keywords = []
categories = []

[package.metadata.details]
title = ""
tagline = ""
summary = ""
announcement = ""
readme = { generate = false }

[dependencies]
clap = { version = "4.5.11", features = ["derive", "env"] }
derive-getters = { version = "0.5.0", features = ["auto_copy_getters"] }
derive-new = "0.7.0"
derive_more = { version = "2.0.1", features = ["full"] }
fmt-derive = "0.1.2"
helpful = { git = "https://github.com/DenisGorbachev/helpful" }
ntfy = { version = "0.8.0" }
numfmt = "1.2.0"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "gzip", "rustls-tls-webpki-roots"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
standard-traits = { git = "https://github.com/DenisGorbachev/standard-traits" }
strum = { version = "0.27.1", features = ["derive"] }
stub-macro = { version = "0.1.3" }
subtype = { git = "https://github.com/DenisGorbachev/subtype" }
tokio = { version = "1.39.2", features = ["macros", "fs", "net", "rt", "rt-multi-thread"] }
url = "2.5.7"
url-macro = "0.2.0"

[package.metadata.cargo-machete]
ignored = [
    "derive-getters",
    "derive-new",
    "derive_more",
    "fmt-derive",
    "helpful",
    "standard-traits",
    "strum",
    "stub-macro",
    "subtype",
    "url"
]
